implement change password and orde-status routes
